[tool.poetry]
name = "yahoo-services"
version = "1.0.0"
description = "Yahoo Finance microservice for global market data and fundamentals"
authors = ["Ashok Kumar"]
readme = "README.md"
packages = [{include = "api"}, {include = "services"}, {include = "utils"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.32.0"}
httpx = ">=0.27.0"
aiohttp = ">=3.9.0"
redis = ">=5.2.0"
pydantic = ">=2.9.0"
pydantic-settings = ">=2.6.0"
yfinance = ">=0.2.18"
python-dotenv = ">=1.0.0"
# Pin NumPy <2 for older CPUs: NumPy 2.x wheels require x86-64-v2 (AVX); 1.26.x has manylinux2010.
numpy = ">=1.26,<2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"
